syntax = "proto3";
package whalelephant.certx.credentials;

// this line is used by starport scaffolding # genesis/proto/import
import "credentials/credential.proto";

option go_package = "github.com/whalelephant/certX/x/credentials/types";

// GenesisState defines the credentials module's genesis state.
message GenesisState {
    // this line is used by starport scaffolding # genesis/proto/state
		repeated Credential credentialList = 2; // this line is used by starport scaffolding # genesis/proto/stateField
		uint64 credentialCount = 3; // this line is used by starport scaffolding # genesis/proto/stateField
    string port_id = 1; // this line is used by starport scaffolding # genesis/proto/stateField
}
